ready to deploy changes

--- a/components/modal/template.html
+++ b/components/modal/template.html
@@ -7,7 +7,7 @@
         max-w-[400px]
     {% endif %}
     ">
-        <div class="flex border-b border-gray-300 px-4">
+        <div class="flex border-b border-gray-300 px-4 items-center">
             <div class="text-xl">{{ modal_title }}</div>
             <!-- Make sure the close button's ID is unique -->
             <button type="button" id="modal-close-btn-{{ modal_type }}" class="ml-auto text-gray-600 p-2 rounded-lg hover:bg-gray-200">
