--- a/listing/templates/listing/search.html
+++ b/listing/templates/listing/search.html
@@ -251,7 +251,7 @@
     });
 
     function highlightActiveFilters(){
-        const highlightClasses = ["ring-2", "ring-red-400", "border-0"];
+        const highlightClasses = ["text-red-400", "ring-2", "ring-red-400", "border-0"];
 
         selectedSortRadio.forEach(radio => {
             const anySortTypeSelected = Array.from(selectedSortRadio).some(radio => radio.checked && radio.value !== '');
