--- a/staticfiles/css/input.css
+++ b/staticfiles/css/input.css
@@ -23,6 +23,21 @@
     @apply px-4 md:px-8 lg:px-20;
   }
   
+  .btn{
+    @apply px-5 py-2.5 rounded-lg flex justify-center items-center gap-2 cursor-pointer transition-all duration-300 ease-in-out
+  }
+
+  .primary-btn{
+    @apply bg-blue-600 text-white hover:bg-blue-700
+  }
+
+  .secondary-btn{
+    @apply border-2 border-blue-600 bg-white shadow hover:bg-gray-100 text-blue-600
+  }
+
+  .tertiary-btn{
+    @apply rounded-lg shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)] bg-white text-gray-800 hover:bg-gray-300
+  }
 
   @keyframes infinite-scroll {
     from {
@@ -73,6 +88,15 @@
       display: none;
     }
 
+    input[type='number']::-webkit-outer-spin-button, input[type='number']::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+
+    input[type='number'] {
+      -moz-appearance: textfield; /* Firefox */
+    }
+
     [x-cloak] {
       @apply hidden;
     }
@@ -90,6 +114,14 @@
       display: none;
     }
     .scrollbar-none {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+
+    .scrollbar-hide::-webkit-scrollbar {
+      display: none;
+    }
+    .scrollbar-hide {
       -ms-overflow-style: none; /* IE and Edge */
       scrollbar-width: none; /* Firefox */
     }
