start work on message on admin

--- a/adminv2/templates/adminv2/users/users.html
+++ b/adminv2/templates/adminv2/users/users.html
@@ -89,7 +89,7 @@
         </table>
     </div>
     
-    {% component "modal" modal_type="user_info" modal_title="User Information" %}
+    {% component "modal" modal_type="user_info" modal_title="User Information" classes="lg:w-4/5 h-[90%] overflow-y-auto" %}
         {% fill "children" %}
         <div class="modal-body overflow-y-auto h-[90%] px-4 py-6">
 
