started work on messsage search filters

--- a/static/css/output.css
+++ b/static/css/output.css
@@ -932,6 +932,9 @@
   .self-stretch {
     align-self: stretch;
   }
+  .overflow-clip {
+    overflow: clip;
+  }
   .overflow-hidden {
     overflow: hidden;
   }
@@ -940,6 +943,9 @@
   }
   .overflow-x-clip {
     overflow-x: clip;
+  }
+  .overflow-x-hidden {
+    overflow-x: hidden;
   }
   .overflow-x-scroll {
     overflow-x: scroll;
